--- a/ACW/ACW2.cfg
+++ b/ACW/ACW2.cfg
@@ -1,5 +1,5 @@
 //
-// time: Fri May 04 22:42:44 2018
+// time: Sun May 06 21:48:53 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -16,14 +16,20 @@
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[2]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
+// panel[2]: position = (0.0109,0.1426), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 500, height = 500
+// workspace: width = 0, height = 0
+// layout: snap = 0, width = 50, height = 50, align = NN
+//
+// panel[3]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
+// title: value = Control Panel
+//
+// workspace: width = 171, height = 181
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // node Colormap[1]:
-// input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.33684211] [1.0 0.33684211] [1.0 0.0] }
+// input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.66315789] [1.0 0.33684211] [1.0 0.0] }
 // input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
 // input[3]: defaulting = 0, value = { [0.0 0.0] [1.0 1.0] }
 // input[4]: defaulting = 0, value = { [0.0 0.26966292] [1.0 0.26966292] }
@@ -34,10 +40,13 @@
 // input[12]: defaulting = 0, value = { 0.0 195.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 195.0
-// window: position = (0.0089,0.1139), size = 0.1693x0.4167
+// window: position = (0.0130,0.1713), size = 0.1693x0.4167
 //
 // interactor ScalarList[1]: num_components = 1, value = { 0.0 19.5 39.0 58.5 78.0 97.5 117.0 136.5 156.0 175.5 195.0 }
 // component[0]: minimum = 0, maximum = 195, global increment = 2, decimal = 1, global continuous = 0
+// instance: panel = 3, x = 5, y = 5, style = List Editor, vertical = 1, size = 166x176
+// local continuous: value = 0, mode = global
+// local increment[0]: value = 1, mode = global
 //
 // node Colormap[2]:
 // input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.14736842] [1.0 0.0] }
@@ -53,15 +62,12 @@
 // input[18]: defaulting = 0, value = 557.0
 // window: position = (0.0109,0.1426), size = 0.1693x0.4167
 //
-// interactor ScalarList[2]: num_components = 1, value = { 0.0 19.5 39.0 58.5 78.0 97.5 117.0 136.5 156.0 175.5 195.0 }
+// interactor ScalarList[3]: num_components = 1, value = { 0.0 55.700001 111.4 167.10001 222.8 278.5 334.20001 389.89999 445.60001 501.29999 557.0 }
 // component[0]: minimum = 0, maximum = 557, global increment = 10, decimal = 1, global continuous = 0
-// instance: panel = 2, x = 5, y = 5, style = List Editor, vertical = 1, size = 166x176
-// local continuous: value = 0, mode = global
-// local increment[0]: value = 1, mode = global
 //
 // node Colormap[3]:
 // input[1]: defaulting = 0, value = { [0.0 0.666667] [0.92138365 0.28421053] [0.92138365 0.0] [1.0 0.0] }
-// input[2]: defaulting = 0, value = { [0.0 1.0] [0.5 0.54736842] [0.5 1.0] [0.88679245 1.0] [1.0 0.66315789] }
+// input[2]: defaulting = 0, value = { [0.0 0.87368421] [0.5 1.0] [0.88679245 1.0] [1.0 0.66315789] }
 // input[3]: defaulting = 0, value = { [0.0 0.16842105] [1.0 1.0] }
 // input[4]: defaulting = 0, value = { [0.0 0.68539326] [1.0 0.68539326] }
 // input[5]: defaulting = 0, value = "Colormap_3"
@@ -71,7 +77,7 @@
 // input[12]: defaulting = 0, value = { 0.0 557.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 557.0
-// window: position = (0.0047,0.0565), size = 0.1693x0.4167
+// window: position = (0.0109,0.1426), size = 0.1693x0.4167
 //
 // node Colormap[4]:
 // input[1]: defaulting = 0, value = { [0.0 1.0] [1.0 0.0] }
@@ -85,23 +91,23 @@
 // input[12]: defaulting = 0, value = { 0.0 195.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 195.0
-// window: position = (0.0047,0.0565), size = 0.1693x0.4167
+// window: position = (0.0068,0.0852), size = 0.1693x0.4167
 //
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.4919,0.1657), size = 0.5000x0.9417
+// window: position = (0.5021,0.0500), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 0.975]
-// input[6]: defaulting = 0, value = [297.061 25.6192 -67.2288]
+// input[6]: defaulting = 0, value = [43.9693 164.781 241.328]
 // input[7]: defaulting = 0, value = 145.077
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.256489 0.305633 0.916952]
-// input[11]: defaulting = 1, value = 30.0001
+// input[10]: defaulting = 0, value = [-0.981195 -0.155163 0.114806]
+// input[11]: defaulting = 1, value = 30.0002
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -115,16 +121,16 @@
 //
 // node Image[2]:
 // depth: value = 24
-// window: position = (0.4508,0.1769), size = 0.5000x0.9417
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_2"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 0.975]
-// input[6]: defaulting = 0, value = [24.8914 310.504 -15.5081]
+// input[6]: defaulting = 0, value = [18.4065 -6.35007 267.057]
 // input[7]: defaulting = 0, value = 145.077
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.517331 0.0318811 0.855192]
-// input[11]: defaulting = 1, value = 30.0003
+// input[10]: defaulting = 0, value = [0.809678 0.566894 0.15183]
+// input[11]: defaulting = 1, value = 30.0002
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -138,15 +144,15 @@
 //
 // node Image[3]:
 // depth: value = 24
-// window: position = (-0.0531,0.1222), size = 0.5000x0.9417
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_3"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 5.38563]
-// input[6]: defaulting = 0, value = [-18.9164 -52.3915 389.036]
+// input[6]: defaulting = 0, value = [194.486 19.6172 370.167]
 // input[7]: defaulting = 0, value = 213.54
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.3086 0.933565 0.182268]
+// input[10]: defaulting = 0, value = [0.128102 0.991761 0.000944103]
 // input[11]: defaulting = 1, value = 30.0001
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
