--- a/ACW/ACW4.cfg
+++ b/ACW/ACW4.cfg
@@ -1,10 +1,10 @@
 //
-// time: Mon May 07 01:25:38 2018
+// time: Mon May 07 03:36:03 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
 //
-// panel[0]: position = (0.1000,0.2009), size = 0.2930x0.3565, startup = 0, devstyle = 1
+// panel[0]: position = (0.1003,0.2005), size = 0.2928x0.3568, startup = 0, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
@@ -22,22 +22,22 @@
 // input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
 // input[17]: defaulting = 0, value = 0.0079512848
 // input[18]: defaulting = 0, value = 0.27386948
-// window: position = (0.0234,0.3148), size = 0.1693x0.4167
+// window: position = (0.0234,0.3151), size = 0.1691x0.4167
 //
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
 // node Image[4]:
 // depth: value = 24
-// window: position = (0.5021,0.0500), size = 0.5000x0.9417
+// window: position = (0.0000,0.0299), size = 1.0000x0.9167
 // input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [-26.8883 104.499 400.044]
-// input[6]: defaulting = 0, value = [-2067.24 -1263.52 4120.14]
+// input[6]: defaulting = 0, value = [-113.46 -1157.69 4674.74]
 // input[7]: defaulting = 0, value = 2389.02
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.248273 -0.945327 -0.211463]
+// input[8]: defaulting = 0, value = 1352
+// input[9]: defaulting = 0, value = 0.491
+// input[10]: defaulting = 0, value = [0.00253478 -0.959076 -0.283136]
 // input[11]: defaulting = 1, value = 29.9999
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
