--- a/ACW/ACW3.cfg
+++ b/ACW/ACW3.cfg
@@ -1,52 +1,52 @@
 //
-// time: Mon May 07 03:57:05 2018
+// time: Mon May 07 18:46:00 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
 //
-// panel[0]: position = (0.1003,0.2005), size = 0.2928x0.3568, startup = 0, devstyle = 1
+// panel[0]: position = (0.1003,0.2009), size = 0.2927x0.3565, startup = 0, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[1]: position = (0.0110,0.1432), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[1]: position = (0.0109,0.1435), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[2]: position = (0.0044,0.0560), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[2]: position = (0.0044,0.0556), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[3]: position = (0.0044,0.0560), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[3]: position = (0.0044,0.0556), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[4]: position = (0.0066,0.0846), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[4]: position = (0.0065,0.0843), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[5]: position = (0.0044,0.0560), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[5]: position = (0.0044,0.0556), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[6]: position = (0.0044,0.0560), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[6]: position = (0.0044,0.0556), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
-// panel[7]: position = (0.0044,0.0560), size = 0.0974x0.4167, startup = 1, devstyle = 1
+// panel[7]: position = (0.0044,0.0556), size = 0.0974x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
 // workspace: width = 500, height = 500
@@ -64,7 +64,7 @@
 // input[12]: defaulting = 0, value = { 0.0 1.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 1.0
-// window: position = (0.0190,0.2578), size = 0.1691x0.4167
+// window: position = (0.0190,0.2574), size = 0.1690x0.4167
 //
 // node Colormap[2]:
 // input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.50526316] [0.17295597 0.50526316] [0.53459119 0.15789474] [1.0 0.15789474] }
@@ -78,7 +78,7 @@
 // input[12]: defaulting = 0, value = { -0.19693901 0.36167699 }
 // input[17]: defaulting = 0, value = -0.19693901
 // input[18]: defaulting = 0, value = 0.36167699
-// window: position = (0.1054,0.1875), size = 0.1691x0.4167
+// window: position = (0.1055,0.1880), size = 0.1690x0.4167
 //
 // node Colormap[5]:
 // input[1]: defaulting = 0, value = { [0.0 0.66315789] [0.40251572 0.65263158] [0.60062893 1.0] [1.0 1.0] [1.0 0.0] }
@@ -92,7 +92,7 @@
 // input[12]: defaulting = 0, value = { 0.0 1.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 1.0
-// window: position = (0.0227,0.2695), size = 0.4026x0.4167
+// window: position = (0.0227,0.2694), size = 0.4026x0.4167
 //
 // node Colormap[6]:
 // input[1]: defaulting = 0, value = { [0.0 0.66315789] [0.40251572 0.65263158] [0.60062893 1.0] [1.0 1.0] [1.0 0.0] }
@@ -106,21 +106,21 @@
 // input[12]: defaulting = 0, value = { 0.0 1.0 }
 // input[17]: defaulting = 0, value = 0.0
 // input[18]: defaulting = 0, value = 1.0
-// window: position = (0.0227,0.2695), size = 0.4026x0.4167
+// window: position = (0.0227,0.2694), size = 0.4026x0.4167
 //
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.1867,0.6732), size = 0.7943x0.8372
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
 // input[6]: defaulting = 0, value = [9.75327 12.1244 116.82]
 // input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 1071
-// input[9]: defaulting = 0, value = 0.563
+// input[8]: defaulting = 0, value = 1906
+// input[9]: defaulting = 0, value = 0.512
 // input[10]: defaulting = 0, value = [0.994638 0.102331 -0.0149319]
 // input[11]: defaulting = 1, value = 29.9999
 // input[12]: defaulting = 0, value = 0
@@ -136,14 +136,14 @@
 //
 // node Image[2]:
 // depth: value = 24
-// window: position = (0.4502,0.7721), size = 0.5000x0.9414
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_2"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
 // input[6]: defaulting = 0, value = [116.581 6.06793 16.2965]
 // input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 669
-// input[9]: defaulting = 0, value = 1.02
+// input[8]: defaulting = 0, value = 1906
+// input[9]: defaulting = 0, value = 0.512
 // input[10]: defaulting = 0, value = [-0.0164071 0.867066 0.497924]
 // input[11]: defaulting = 1, value = 29.9995
 // input[12]: defaulting = 0, value = 0
@@ -159,16 +159,16 @@
 //
 // node Image[3]:
 // depth: value = 24
-// window: position = (0.1479,0.1576), size = 0.5000x0.9102
+// window: position = (0.5000,0.0213), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_3"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [7.69433 13.9858 116.747]
+// input[6]: defaulting = 0, value = [-1.36016 23.3148 115.417]
 // input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 669
-// input[9]: defaulting = 0, value = 0.984
-// input[10]: defaulting = 0, value = [0.20007 0.9786 -0.0481047]
-// input[11]: defaulting = 1, value = 29.9996
+// input[8]: defaulting = 0, value = 1906
+// input[9]: defaulting = 0, value = 0.512
+// input[10]: defaulting = 0, value = [0.0928957 0.987382 -0.128249]
+// input[11]: defaulting = 1, value = 29.9998
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -182,15 +182,15 @@
 //
 // node Image[4]:
 // depth: value = 24
-// window: position = (0.1596,0.2383), size = 0.5000x0.9102
+// window: position = (0.5000,0.0213), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [-47.8496 12.9271 100.983]
+// input[6]: defaulting = 0, value = [25.2623 14.7275 115.403]
 // input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 669
-// input[9]: defaulting = 0, value = 0.984
-// input[10]: defaulting = 0, value = [0.376211 0.907719 0.185772]
+// input[8]: defaulting = 0, value = 1906
+// input[9]: defaulting = 0, value = 0.512
+// input[10]: defaulting = 0, value = [0.411156 0.904008 -0.117132]
 // input[11]: defaulting = 1, value = 29.9998
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
