--- a/ACW/ACW1.cfg
+++ b/ACW/ACW1.cfg
@@ -1,5 +1,5 @@
 //
-// time: Sun May 06 21:36:43 2018
+// time: Tue May 08 16:38:18 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -13,12 +13,12 @@
 // panel[1]: position = (0.0109,0.1426), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 171, height = 181
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // node Colormap[1]:
-// input[1]: defaulting = 0, value = { [0.0 0.66666] [0.11949686 0.65263158] [0.11949686 0.32631579] [0.58176101 0.32631579] [0.58176101 0.0] [1.0 0.0] }
-// input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[1]: defaulting = 0, value = { [0.0 0.65263158] [0.55345912 0.65263158] [0.55345912 0.32631579] [0.61006289 0.32631579] [0.61006289 0.0] [1.0 0.0] }
+// input[2]: defaulting = 0, value = { [0.0 0.2] [0.11949686 0.2] [0.11949686 1.0] [1.0 1.0] }
 // input[3]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
 // input[4]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
 // input[5]: defaulting = 0, value = "Colormap_1"
@@ -30,7 +30,7 @@
 // input[12]: defaulting = 0, value = { -22162.0 15935.0 }
 // input[17]: defaulting = 0, value = -22162.0
 // input[18]: defaulting = 0, value = 15935.0
-// window: position = (0.6130,0.2537), size = 0.1693x0.4167
+// window: position = (0.2539,0.1963), size = 0.1693x0.4167
 //
 // interactor ScalarList[1]: num_components = 1, value = { -22162.0 -18352.301 -14542.6 -10732.9 -6923.2002 -3113.5 696.20001 4505.8999 8315.5996 12125.3 15935.0 }
 // component[0]: minimum = -22162, maximum = 15935, global increment = 500, decimal = 1, global continuous = 0
@@ -43,16 +43,16 @@
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.5000,0.0213), size = 0.5000x0.9417
+// window: position = (0.5021,0.0500), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35 35 -12.454]
-// input[6]: defaulting = 0, value = [78.2632 -54.6133 433.221]
+// input[6]: defaulting = 0, value = [89.3735 -252.927 337.784]
 // input[7]: defaulting = 0, value = 244.716
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.0886379 0.978147 0.188075]
-// input[11]: defaulting = 1, value = 29.9998
+// input[10]: defaulting = 0, value = [-0.0989744 0.761091 0.64105]
+// input[11]: defaulting = 1, value = 30.0001
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -65,5 +65,5 @@
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
 // input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "pick"
+// input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
