--- a/ACW/ACW1.cfg
+++ b/ACW/ACW1.cfg
@@ -1,5 +1,5 @@
 //
-// time: Tue May 08 16:38:18 2018
+// time: Wed May 09 19:33:31 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -15,6 +15,11 @@
 //
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
+//
+// node Sequencer[1]:
+// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 0, inc = 1, loop = off, step = off, pal = off
+// window: position = (0.5354,0.2037), size = 0.0729x0.0741
+// startup = 0
 //
 // node Colormap[1]:
 // input[1]: defaulting = 0, value = { [0.0 0.65263158] [0.55345912 0.65263158] [0.55345912 0.32631579] [0.61006289 0.32631579] [0.61006289 0.0] [1.0 0.0] }
@@ -32,27 +37,24 @@
 // input[18]: defaulting = 0, value = 15935.0
 // window: position = (0.2539,0.1963), size = 0.1693x0.4167
 //
-// interactor ScalarList[1]: num_components = 1, value = { -22162.0 -18352.301 -14542.6 -10732.9 -6923.2002 -3113.5 696.20001 4505.8999 8315.5996 12125.3 15935.0 }
+// interactor ScalarList[2]: num_components = 1, value = { -22162.0 -18352.301 -14542.6 -10732.9 -6923.2002 -3113.5 696.20001 4505.8999 8315.5996 12125.3 15935.0 }
 // component[0]: minimum = -22162, maximum = 15935, global increment = 500, decimal = 1, global continuous = 0
-// instance: panel = 1, x = 5, y = 5, style = List Editor, vertical = 1, size = 166x176
-// local continuous: value = 0, mode = global
-// local increment[0]: value = 1, mode = global
 //
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.5021,0.0500), size = 0.5000x0.9417
+// window: position = (0.5125,0.1935), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [35 35 -12.454]
-// input[6]: defaulting = 0, value = [89.3735 -252.927 337.784]
-// input[7]: defaulting = 0, value = 244.716
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.0989744 0.761091 0.64105]
-// input[11]: defaulting = 1, value = 30.0001
+// input[5]: defaulting = 0, value = [35 35 0]
+// input[6]: defaulting = 0, value = [0 0 45]
+// input[7]: defaulting = 0, value = 300.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 0 1]
+// input[11]: defaulting = 1, value = 131.929
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
