--- a/ACW/ACW3.cfg
+++ b/ACW/ACW3.cfg
@@ -1,5 +1,5 @@
 //
-// time: Mon May 07 22:05:08 2018
+// time: Wed May 09 19:34:05 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -52,6 +52,12 @@
 // workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
+// panel[8]: position = (0.0089,0.1139), size = 0.0977x0.4167, startup = 1, devstyle = 1
+// title: value = Control Panel
+//
+// workspace: width = 500, height = 500
+// layout: snap = 0, width = 50, height = 50, align = NN
+//
 // node Colormap[1]:
 // input[1]: defaulting = 0, value = { [0.0 0.66315789] [0.40251572 0.65263158] [0.60062893 1.0] [1.0 1.0] [1.0 0.0] }
 // input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
@@ -78,7 +84,7 @@
 // input[12]: defaulting = 0, value = { -0.19693901 0.36167699 }
 // input[17]: defaulting = 0, value = -0.19693901
 // input[18]: defaulting = 0, value = 0.36167699
-// window: position = (0.1055,0.1880), size = 0.1690x0.4167
+// window: position = (0.1076,0.2167), size = 0.1690x0.4167
 //
 // node Colormap[5]:
 // input[1]: defaulting = 0, value = { [0.0 0.66315789] [0.40251572 0.65263158] [0.60062893 1.0] [1.0 1.0] [1.0 0.0] }
@@ -113,16 +119,16 @@
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.0021,0.0287), size = 0.5000x0.9417
+// window: position = (0.5188,0.2796), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [9.75327 12.1244 116.82]
-// input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.994638 0.102331 -0.0149319]
-// input[11]: defaulting = 1, value = 29.9999
+// input[6]: defaulting = 0, value = [0 15 20]
+// input[7]: defaulting = 0, value = 75.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 1 0]
+// input[11]: defaulting = 1, value = 134.544
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -130,22 +136,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
-// node Image[2]:
+// node Image[5]:
 // depth: value = 24
-// window: position = (0.0021,0.0287), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_2"
+// window: position = (0.5208,0.3083), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_5"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [116.581 6.06793 16.2965]
-// input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.0164071 0.867066 0.497924]
-// input[11]: defaulting = 1, value = 29.9995
+// input[6]: defaulting = 0, value = [0 15 20]
+// input[7]: defaulting = 0, value = 75.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 1 0]
+// input[11]: defaulting = 1, value = 134.544
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -153,22 +163,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
-// node Image[3]:
+// node Image[6]:
 // depth: value = 24
-// window: position = (0.0000,0.0213), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_3"
+// window: position = (0.5229,0.3370), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_6"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [-17.2794 17.5972 113.384]
-// input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.379813 0.92497 0.0131261]
-// input[11]: defaulting = 1, value = 29.9998
+// input[6]: defaulting = 0, value = [0 15 20]
+// input[7]: defaulting = 0, value = 75.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 1 0]
+// input[11]: defaulting = 1, value = 134.544
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -176,22 +190,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
-// node Image[4]:
+// node Image[7]:
 // depth: value = 24
-// window: position = (0.0000,0.0213), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_4"
+// window: position = (0.5208,0.3083), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_7"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [25.2623 14.7275 115.403]
-// input[7]: defaulting = 0, value = 58.0846
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.411156 0.904008 -0.117132]
-// input[11]: defaulting = 1, value = 29.9998
+// input[6]: defaulting = 0, value = [0 15 20]
+// input[7]: defaulting = 0, value = 75.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 1 0]
+// input[11]: defaulting = 1, value = 134.544
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -199,6 +217,10 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
