--- a/ACW/ACW4.cfg
+++ b/ACW/ACW4.cfg
@@ -1,5 +1,5 @@
 //
-// time: Mon May 07 22:05:18 2018
+// time: Wed May 09 22:39:12 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -13,8 +13,8 @@
 // node Colormap[5]:
 // input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.15789474] [1.0 0.0] }
 // input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
-// input[3]: defaulting = 0, value = { [0.0 0.26315789] [1.0 1.0] }
-// input[4]: defaulting = 0, value = { [0.0 0.24719101] [1.0 1.0] }
+// input[3]: defaulting = 0, value = { [0.0 0.0] [1.0 1.0] }
+// input[4]: defaulting = 0, value = { [0.081761006 0.0] [1.0 1.0] }
 // input[5]: defaulting = 0, value = "Colormap_5"
 // input[7]: defaulting = 1, value = 0.0079512848
 // input[8]: defaulting = 1, value = 0.27386948
@@ -22,7 +22,35 @@
 // input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
 // input[17]: defaulting = 0, value = 0.0079512848
 // input[18]: defaulting = 0, value = 0.27386948
-// window: position = (0.0255,0.3435), size = 0.1690x0.4167
+// window: position = (0.0380,0.5157), size = 0.1690x0.4167
+//
+// node Colormap[9]:
+// input[1]: defaulting = 0, value = { [0.0 0.17021277] [1.0 0.17021277] }
+// input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 0.63157895] }
+// input[3]: defaulting = 0, value = { [0.0 0.77894737] [1.0 1.0] }
+// input[4]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[5]: defaulting = 0, value = "Colormap_9"
+// input[7]: defaulting = 1, value = 0.0079512848
+// input[8]: defaulting = 1, value = 0.27386948
+// input[9]: defaulting = 1, value = 20
+// input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
+// input[17]: defaulting = 0, value = 0.0079512848
+// input[18]: defaulting = 0, value = 0.27386948
+// window: position = (0.0380,0.5157), size = 0.1690x0.4167
+//
+// node Colormap[8]:
+// input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.4787234] [1.0 0.32978723] }
+// input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[3]: defaulting = 0, value = { [0.0 0.26315789] [1.0 1.0] }
+// input[4]: defaulting = 0, value = { [0.0 0.0] [0.90880503 0.0] [1.0 1.0] }
+// input[5]: defaulting = 0, value = "Colormap_8"
+// input[7]: defaulting = 1, value = 0.0079512848
+// input[8]: defaulting = 1, value = 0.27386948
+// input[9]: defaulting = 1, value = 20
+// input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
+// input[17]: defaulting = 0, value = 0.0079512848
+// input[18]: defaulting = 0, value = 0.27386948
+// window: position = (0.1693,0.2648), size = 0.1690x0.4167
 //
 // node Colormap[6]:
 // input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.15789474] [1.0 0.0] }
@@ -38,35 +66,21 @@
 // input[18]: defaulting = 0, value = 0.27386948
 // window: position = (0.0234,0.3148), size = 0.1690x0.4167
 //
-// node Colormap[7]:
-// input[1]: defaulting = 0, value = { [0.0 0.666667] [1.0 0.0] }
-// input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
-// input[3]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
-// input[4]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
-// input[5]: defaulting = 0, value = "Colormap_7"
-// input[7]: defaulting = 1, value = 0.0079512848
-// input[8]: defaulting = 1, value = 0.27386948
-// input[9]: defaulting = 1, value = 20
-// input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
-// input[17]: defaulting = 0, value = 0.0079512848
-// input[18]: defaulting = 0, value = 0.27386948
-// window: position = (8.5331,30.3398), size = 8.5331x30.3398
-//
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
-// node Image[4]:
+// node Image[1]:
 // depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_4"
+// window: position = (0.5271,0.3944), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [-26.8883 104.499 400.044]
-// input[6]: defaulting = 0, value = [-2076.66 -2539.91 3346.08]
-// input[7]: defaulting = 0, value = 2389.02
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.68393 0.711212 0.162537]
-// input[11]: defaulting = 1, value = 29.9999
+// input[5]: defaulting = 0, value = [-27 104 400]
+// input[6]: defaulting = 0, value = [160.844 275.37 -241.477]
+// input[7]: defaulting = 0, value = 2000.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [-0.151899 0.965096 0.213344]
+// input[11]: defaulting = 1, value = 110.786
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -74,45 +88,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
-// input[41]: defaulting = 0, value = "rotate"
-// internal caching: 1
-//
-// node Image[5]:
-// depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_5"
-// input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [-26.8883 104.499 400.044]
-// input[6]: defaulting = 0, value = [647.093 1376.84 4619.08]
-// input[7]: defaulting = 0, value = 2389.02
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.408992 0.853558 -0.322744]
-// input[11]: defaulting = 1, value = 30.0001
-// input[12]: defaulting = 0, value = 0
-// input[14]: defaulting = 0, value = 1
-// input[15]: defaulting = 1, value = "none"
-// input[16]: defaulting = 1, value = "none"
-// input[17]: defaulting = 1, value = 1
-// input[18]: defaulting = 1, value = 1
-// input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
 // node Image[6]:
 // depth: value = 24
-// window: position = (0.0068,0.0852), size = 0.1703x0.4833
+// window: position = (0.5589,0.0769), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_6"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [-27 104 400]
-// input[6]: defaulting = 0, value = [1746.47 617.3 -2010.58]
-// input[7]: defaulting = 0, value = 1627.18
-// input[8]: defaulting = 0, value = 640
-// input[9]: defaulting = 0, value = 0.75
-// input[10]: defaulting = 0, value = [0.314262 0.854696 0.413199]
-// input[11]: defaulting = 1, value = 29.9999
+// input[6]: defaulting = 0, value = [-439.12 284.225 923.293]
+// input[7]: defaulting = 0, value = 2000.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0.206816 0.963671 -0.169016]
+// input[11]: defaulting = 1, value = 110.785
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -120,6 +115,10 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
