--- a/ACW/ACW2.cfg
+++ b/ACW/ACW2.cfg
@@ -1,5 +1,5 @@
 //
-// time: Sun May 06 21:48:53 2018
+// time: Wed May 09 19:34:30 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -19,14 +19,19 @@
 // panel[2]: position = (0.0109,0.1426), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[3]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 171, height = 181
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
+//
+// node Sequencer[1]:
+// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 1, inc = 1, loop = off, step = off, pal = off
+// window: position = (0.5458,0.3472), size = 0.0729x0.0741
+// startup = 0
 //
 // node Colormap[1]:
 // input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.66315789] [1.0 0.33684211] [1.0 0.0] }
@@ -96,18 +101,18 @@
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
-// node Image[1]:
+// node Image[4]:
 // depth: value = 24
-// window: position = (0.5021,0.0500), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_1"
+// window: position = (0.6328,0.2519), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [35.5 40.5 0.975]
-// input[6]: defaulting = 0, value = [43.9693 164.781 241.328]
-// input[7]: defaulting = 0, value = 145.077
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [-0.981195 -0.155163 0.114806]
-// input[11]: defaulting = 1, value = 30.0002
+// input[5]: defaulting = 0, value = [35.5 40.5 0]
+// input[6]: defaulting = 0, value = [0 0 45]
+// input[7]: defaulting = 0, value = 200.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 0 1]
+// input[11]: defaulting = 1, value = 109.876
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -115,22 +120,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
-// node Image[2]:
+// node Image[5]:
 // depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_2"
+// window: position = (0.1125,0.2417), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_5"
 // input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [35.5 40.5 0.975]
-// input[6]: defaulting = 0, value = [18.4065 -6.35007 267.057]
-// input[7]: defaulting = 0, value = 145.077
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.809678 0.566894 0.15183]
-// input[11]: defaulting = 1, value = 30.0002
+// input[5]: defaulting = 0, value = [35.5 40.5 0]
+// input[6]: defaulting = 0, value = [0 0 45]
+// input[7]: defaulting = 0, value = 200.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 0 1]
+// input[11]: defaulting = 1, value = 109.876
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -138,22 +147,26 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
-// node Image[3]:
+// node Image[6]:
 // depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
-// input[1]: defaulting = 0, value = "Image_3"
+// window: position = (0.5055,0.1759), size = 0.3594x0.7343
+// input[1]: defaulting = 0, value = "Image_6"
 // input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [35.5 40.5 5.38563]
-// input[6]: defaulting = 0, value = [194.486 19.6172 370.167]
-// input[7]: defaulting = 0, value = 213.54
-// input[8]: defaulting = 0, value = 1906
-// input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.128102 0.991761 0.000944103]
-// input[11]: defaulting = 1, value = 30.0001
+// input[5]: defaulting = 0, value = [35.5 40.5 0]
+// input[6]: defaulting = 0, value = [0 0 45]
+// input[7]: defaulting = 0, value = 200.0
+// input[8]: defaulting = 0, value = 1366
+// input[9]: defaulting = 0, value = 0.55
+// input[10]: defaulting = 0, value = [0 0 1]
+// input[11]: defaulting = 1, value = 109.876
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -161,6 +174,10 @@
 // input[17]: defaulting = 1, value = 1
 // input[18]: defaulting = 1, value = 1
 // input[19]: defaulting = 0, value = 0
-// input[29]: defaulting = 1, value = 0
+// input[20]: defaulting = 1, value = NULL
+// input[21]: defaulting = 1, value = NULL
+// input[23]: defaulting = 1, value = NULL
+// input[29]: defaulting = 0, value = 1
+// input[30]: defaulting = 1, value = {"1"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
