all functionality has been added

--- a/ACW/ACW1.cfg
+++ b/ACW/ACW1.cfg
@@ -1,5 +1,5 @@
 //
-// time: Wed May 09 19:33:31 2018
+// time: Thu May 10 21:10:00 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -17,8 +17,8 @@
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // node Sequencer[1]:
-// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 0, inc = 1, loop = off, step = off, pal = off
-// window: position = (0.5354,0.2037), size = 0.0729x0.0741
+// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 1, inc = 1, loop = off, step = off, pal = off
+// window: position = (0.5396,0.2611), size = 0.0729x0.0741
 // startup = 0
 //
 // node Colormap[1]:
@@ -45,7 +45,7 @@
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.5125,0.1935), size = 0.3594x0.7343
+// window: position = (0.5062,0.1074), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35 35 0]
@@ -66,6 +66,6 @@
 // input[21]: defaulting = 1, value = NULL
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "rotate"
+// input[30]: defaulting = 0, value = {"X", "Y", "PES"}
+// input[41]: defaulting = 0, value = "pick"
 // internal caching: 1
