--- a/ACW/ACW2.cfg
+++ b/ACW/ACW2.cfg
@@ -1,5 +1,5 @@
 //
-// time: Wed May 09 19:34:30 2018
+// time: Thu May 10 19:59:22 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -29,9 +29,9 @@
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // node Sequencer[1]:
-// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 1, inc = 1, loop = off, step = off, pal = off
-// window: position = (0.5458,0.3472), size = 0.0729x0.0741
-// startup = 0
+// vcr[1]: min = 0, max = 75, beg = 0, end = 75, cur = 0, inc = 1, loop = off, step = off, pal = off
+// window: position = (0.5479,0.3759), size = 0.0729x0.0741
+// startup = 1
 //
 // node Colormap[1]:
 // input[1]: defaulting = 0, value = { [0.0 0.0] [0.0 0.66315789] [1.0 0.33684211] [1.0 0.0] }
@@ -103,7 +103,7 @@
 //
 // node Image[4]:
 // depth: value = 24
-// window: position = (0.6328,0.2519), size = 0.3594x0.7343
+// window: position = (0.6411,0.3667), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 0]
@@ -124,13 +124,13 @@
 // input[21]: defaulting = 1, value = NULL
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
+// input[30]: defaulting = 0, value = {"X", "Y", "Bone Density"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
 // node Image[5]:
 // depth: value = 24
-// window: position = (0.1125,0.2417), size = 0.3594x0.7343
+// window: position = (0.0841,0.1889), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_5"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 0]
@@ -151,13 +151,13 @@
 // input[21]: defaulting = 1, value = NULL
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
+// input[30]: defaulting = 0, value = {"X", "Y", "Blood Flow"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
 //
 // node Image[6]:
 // depth: value = 24
-// window: position = (0.5055,0.1759), size = 0.3594x0.7343
+// window: position = (0.1318,0.2880), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_6"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [35.5 40.5 0]
@@ -178,6 +178,6 @@
 // input[21]: defaulting = 1, value = NULL
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
+// input[30]: defaulting = 0, value = {"X", "Y", "Bone Density"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
