--- a/ACW/ACW3.cfg
+++ b/ACW/ACW3.cfg
@@ -1,5 +1,5 @@
 //
-// time: Wed May 09 19:34:05 2018
+// time: Thu May 10 20:06:40 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -117,90 +117,14 @@
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
-// node Image[1]:
-// depth: value = 24
-// window: position = (0.5188,0.2796), size = 0.3594x0.7343
-// input[1]: defaulting = 0, value = "Image_1"
-// input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [0 15 20]
-// input[7]: defaulting = 0, value = 75.0
-// input[8]: defaulting = 0, value = 1366
-// input[9]: defaulting = 0, value = 0.55
-// input[10]: defaulting = 0, value = [0 1 0]
-// input[11]: defaulting = 1, value = 134.544
-// input[12]: defaulting = 0, value = 0
-// input[14]: defaulting = 0, value = 1
-// input[15]: defaulting = 1, value = "none"
-// input[16]: defaulting = 1, value = "none"
-// input[17]: defaulting = 1, value = 1
-// input[18]: defaulting = 1, value = 1
-// input[19]: defaulting = 0, value = 0
-// input[20]: defaulting = 1, value = NULL
-// input[21]: defaulting = 1, value = NULL
-// input[23]: defaulting = 1, value = NULL
-// input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "rotate"
-// internal caching: 1
-//
-// node Image[5]:
-// depth: value = 24
-// window: position = (0.5208,0.3083), size = 0.3594x0.7343
-// input[1]: defaulting = 0, value = "Image_5"
-// input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [0 15 20]
-// input[7]: defaulting = 0, value = 75.0
-// input[8]: defaulting = 0, value = 1366
-// input[9]: defaulting = 0, value = 0.55
-// input[10]: defaulting = 0, value = [0 1 0]
-// input[11]: defaulting = 1, value = 134.544
-// input[12]: defaulting = 0, value = 0
-// input[14]: defaulting = 0, value = 1
-// input[15]: defaulting = 1, value = "none"
-// input[16]: defaulting = 1, value = "none"
-// input[17]: defaulting = 1, value = 1
-// input[18]: defaulting = 1, value = 1
-// input[19]: defaulting = 0, value = 0
-// input[20]: defaulting = 1, value = NULL
-// input[21]: defaulting = 1, value = NULL
-// input[23]: defaulting = 1, value = NULL
-// input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "rotate"
-// internal caching: 1
-//
-// node Image[6]:
-// depth: value = 24
-// window: position = (0.5229,0.3370), size = 0.3594x0.7343
-// input[1]: defaulting = 0, value = "Image_6"
-// input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [0 15 20]
-// input[7]: defaulting = 0, value = 75.0
-// input[8]: defaulting = 0, value = 1366
-// input[9]: defaulting = 0, value = 0.55
-// input[10]: defaulting = 0, value = [0 1 0]
-// input[11]: defaulting = 1, value = 134.544
-// input[12]: defaulting = 0, value = 0
-// input[14]: defaulting = 0, value = 1
-// input[15]: defaulting = 1, value = "none"
-// input[16]: defaulting = 1, value = "none"
-// input[17]: defaulting = 1, value = 1
-// input[18]: defaulting = 1, value = 1
-// input[19]: defaulting = 0, value = 0
-// input[20]: defaulting = 1, value = NULL
-// input[21]: defaulting = 1, value = NULL
-// input[23]: defaulting = 1, value = NULL
-// input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "rotate"
-// internal caching: 1
+// node Sequencer[1]:
+// vcr[1]: min = 1, max = 4, beg = 1, end = 4, cur = 1, inc = 1, loop = off, step = on, pal = off
+// window: position = (0.0130,0.1713), size = 0.0729x0.0741
+// startup = 0
 //
 // node Image[7]:
 // depth: value = 24
-// window: position = (0.5208,0.3083), size = 0.3594x0.7343
+// window: position = (0.5576,0.2037), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_7"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
