--- a/ACW/ACW4.cfg
+++ b/ACW/ACW4.cfg
@@ -1,5 +1,5 @@
 //
-// time: Wed May 09 22:39:12 2018
+// time: Thu May 10 20:13:40 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -22,7 +22,7 @@
 // input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
 // input[17]: defaulting = 0, value = 0.0079512848
 // input[18]: defaulting = 0, value = 0.27386948
-// window: position = (0.0380,0.5157), size = 0.1690x0.4167
+// window: position = (0.0401,0.5444), size = 0.1690x0.4167
 //
 // node Colormap[9]:
 // input[1]: defaulting = 0, value = { [0.0 0.17021277] [1.0 0.17021277] }
@@ -50,7 +50,7 @@
 // input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
 // input[17]: defaulting = 0, value = 0.0079512848
 // input[18]: defaulting = 0, value = 0.27386948
-// window: position = (0.1693,0.2648), size = 0.1690x0.4167
+// window: position = (0.1714,0.2935), size = 0.1690x0.4167
 //
 // node Colormap[6]:
 // input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.15789474] [1.0 0.0] }
@@ -69,17 +69,22 @@
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
+// node Sequencer[1]:
+// vcr[1]: min = 1, max = 2, beg = 1, end = 2, cur = 1, inc = 1, loop = off, step = off, pal = off
+// window: position = (0.0109,0.1426), size = 0.0729x0.0741
+// startup = 0
+//
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.5271,0.3944), size = 0.3594x0.7343
+// window: position = (0.5445,0.1972), size = 0.3594x0.7343
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [-27 104 400]
-// input[6]: defaulting = 0, value = [160.844 275.37 -241.477]
+// input[6]: defaulting = 0, value = [500 300 0]
 // input[7]: defaulting = 0, value = 2000.0
 // input[8]: defaulting = 0, value = 1366
 // input[9]: defaulting = 0, value = 0.55
-// input[10]: defaulting = 0, value = [-0.151899 0.965096 0.213344]
+// input[10]: defaulting = 0, value = [0 1 0]
 // input[11]: defaulting = 1, value = 110.786
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
@@ -92,33 +97,6 @@
 // input[21]: defaulting = 1, value = NULL
 // input[23]: defaulting = 1, value = NULL
 // input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
-// input[41]: defaulting = 0, value = "rotate"
-// internal caching: 1
-//
-// node Image[6]:
-// depth: value = 24
-// window: position = (0.5589,0.0769), size = 0.3594x0.7343
-// input[1]: defaulting = 0, value = "Image_6"
-// input[4]: defaulting = 0, value = 1
-// input[5]: defaulting = 0, value = [-27 104 400]
-// input[6]: defaulting = 0, value = [-439.12 284.225 923.293]
-// input[7]: defaulting = 0, value = 2000.0
-// input[8]: defaulting = 0, value = 1366
-// input[9]: defaulting = 0, value = 0.55
-// input[10]: defaulting = 0, value = [0.206816 0.963671 -0.169016]
-// input[11]: defaulting = 1, value = 110.785
-// input[12]: defaulting = 0, value = 0
-// input[14]: defaulting = 0, value = 1
-// input[15]: defaulting = 1, value = "none"
-// input[16]: defaulting = 1, value = "none"
-// input[17]: defaulting = 1, value = 1
-// input[18]: defaulting = 1, value = 1
-// input[19]: defaulting = 0, value = 0
-// input[20]: defaulting = 1, value = NULL
-// input[21]: defaulting = 1, value = NULL
-// input[23]: defaulting = 1, value = NULL
-// input[29]: defaulting = 0, value = 1
-// input[30]: defaulting = 1, value = {"1"}
+// input[30]: defaulting = 0, value = {"X", "Y", "Z"}
 // input[41]: defaulting = 0, value = "rotate"
 // internal caching: 1
